--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -14,7 +14,6 @@
 			"version": "1.40.12"
 		}
 	},
-
 	"sap.ui": {
 		"technology": "UI5",
 		"icons": {
@@ -31,7 +30,6 @@
 			"phone": true
 		}
 	},
-
 	"sap.ui5": {
 		"flexEnabled": false,
 		"rootView": {
@@ -61,9 +59,11 @@
 			}
 		},
 		"resources": {
-			"css": [{
-				"uri": "css/style.css"
-			}]
+			"css": [
+				{
+					"uri": "css/style.css"
+				}
+			]
 		},
 		"routing": {
 			"config": {
@@ -75,11 +75,30 @@
 				"controlId": "app",
 				"clearControlAggregation": false
 			},
-			"routes": [{
-				"name": "RouteRoot",
-				"pattern": "RouteRoot",
-				"target": ["TargetRoot"]
-			}],
+			"routes": [
+				{
+					"name": "RouteRoot",
+					"pattern": "RouteRoot",
+					"target": [
+						"TargetRoot"
+					]
+				},
+				{
+					"name": "MasterView",
+					"pattern": "",
+					"target": [
+						"master"
+					]
+				},
+				{
+					"name": "DetailView",
+					"pattern": "Product/{ID}",
+					"target": [
+						"master",
+						"detail"
+					]
+				}
+			],
 			"targets": {
 				"TargetRoot": {
 					"viewType": "XML",
@@ -87,6 +106,16 @@
 					"clearControlAggregation": false,
 					"viewId": "Root",
 					"viewName": "Root"
+				},
+				"master": {
+					"viewType": "XML",
+					"viewName": "MasterPage",
+					"controlAggregation": "masterPages"
+				},
+				"detail": {
+					"viewType": "XML",
+					"viewName": "DetailPage",
+					"controlAggregation": "detailPages"
 				}
 			}
 		}
